Fixed RealPermissions hook